2006-12-07  Kazu Hirata  <kazu@codesourcery.com>

	* config/tc-m68k.c: Update uses of EF_M68K_*.

2006-12-06  H.J. Lu <hjl@gnu.org>

	* config/tc-i386.h: Change the prefix order to SEG_PREFIX,
	ADDR_PREFIX, DATA_PREFIX, LOCKREP_PREFIX.

2006-12-02  Jakub Jelinek  <jakub@redhat.com>

	PR gas/3607
	* subsegs.c (subseg_set_rest): Clear frch_cfi_data field.

2006-12-01  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (arm_force_relocation): Return 1 for relocs against
	function symbols.

2006-11-29  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (arm_is_eabi): New function.
	* config/tc-arm.h (arm_is_eabi): New prototype.
	(THUMB_IS_FUNC): Use ELF function type for EABI objects.
	* doc/c-arm.texi (.thumb_func): Update documentation.

2006-11-29  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (do_vfp_sp_const, do_vfp_dp_const): Fix operans
	encoding.

2006-11-27  Sterling Augustine  <sterling@tensilica.com>

	* config/tc-xtensa.c (xtensa_sanity_check): Check for RELAX_IMMED
	as the first slot_subtype, not the frag subtype.

2006-11-27  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (XSHAL_ABI): Add default definition.
	(directive_state): Disable scheduling by default.
	(xtensa_add_config_info): New.
	(xtensa_end): Call xtensa_add_config_info.

2006-11-27  Eric Botcazou  <ebotcazou@adacore.com>

	* config/tc-sparc.c (tc_gen_reloc): Turn aligned relocs into
	their unaligned counterparts in debugging sections.

2006-11-24  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-spu.c (md_pseudo_table): Add eqv and .eqv.

2006-11-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* config/tc-arm.h (md_cons_align): Define.
	(mapping_state): New prototype.
	* config/tc-arm.c (mapping_state): Make global.

2006-11-22  Alan Modra  <amodra@bigpond.net.au>

	* config/obj-elf.c (obj_elf_version): Use memcpy rather than strcpy.

2006-11-16  Mei ligang  <ligang@sunnorth.com.cn>

	* config/tc-score.c (score_relax_frag): If next frag contains 32 bit