@@ -1,3 +1,10 @@
+2006-12-08  Christian Groessler  <chris@groessler.org>
+
+	* config/tc-z8k.c (whatreg): Add comment describing function.
+	Return NULL if symbol name characters follow the register number.
+	(parse_reg): Use NULL instead of 0 for pointer values.  Stop
+	processing if whatreg returned NULL.
+
 2006-12-07  Kazu Hirata  <kazu@codesourcery.com>
 
 	* config/tc-m68k.c: Update uses of EF_M68K_*.
